// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`rule element-permitted-content should contain documentation content error 1`] = `
{
  "description": "The \`<div>\` element is not permitted as content under the parent \`<span>\` element.",
  "url": "https://html-validate.org/rules/element-permitted-content.html",
}
`;

exports[`rule element-permitted-content should contain documentation descendant error 1`] = `
{
  "description": "The \`<div>\` element is not permitted as a descendant of the \`<span>\` element.",
  "url": "https://html-validate.org/rules/element-permitted-content.html",
}
`;
